# kiss-script

./: KISS.desktop  KS2.desktop  README.md  build-2.sh  build.sh  build.sh~  build.txt
kiss/: CMakeLists.txt
kiss/deploy/: C++_HelloWorld.cpp  C_HelloWorld.c  Hello_world_MAY_29.c  KISS  output_widget_test  save_as_dialog_test  template_test
kiss/plugins/interfaces/kovan/: kovan_interface.hpp
kovan-serial/: CMakeLists.txt
kovan-serial/dbus/: generate.sh
kovan-serial/dbus/include/: Serial.h
kovan-serial/dbus/src/: Serial.cpp
kovan-serial/deploy/: kovan-serial
kovan-serial/include/: compile_worker.hpp  constants.hpp  heartbeat.hpp  properties.hpp  server_thread.hpp  tcp_server_thread.hpp
kovan-serial/src/: compile_worker.cpp  heartbeat.cpp  kovan-serial.cpp  properties.cpp  server_thread.cpp  tcp_server_thread.cpp
ks2/: CMakeLists.txt
ks2/deploy/: ks2  platform.hints
ks2/include/: board_file.hpp  console_widget.hpp  kovan_kmod_sim.hpp  main_window.hpp  robot.hpp  server_thread.hpp  simulator.hpp
ks2/rc/: Info.plist
ks2/src/: board_file.cpp  compile_worker.cpp  console_widget.cpp  heartbeat.cpp  kovan_kmod_sim.cpp  main.cpp  main_window.cpp  robot.cpp  scaling_graphics_view.cpp  server_thread.cpp  touch_dial.cpp
ks2/ui/: main_window.ui
libkovan/src/: ardrone_video_p.cpp  kovan_module_p.cpp
libkovanserial/: CMakeLists.txt
libkovanserial/include/kovanserial/: command_types.hpp  crc.h  general.hpp  kovan_serial.hpp  platform_defines.hpp  tcp.hpp  tcp_serial.hpp  tcp_server.hpp  transmitter.hpp  transport_layer.hpp  udp_advertiser.hpp  usb_serial.hpp  usb_serial_unix.hpp  usb_serial_win.hpp
libkovanserial/src/: crc.c  general.cpp  kovan_serial.cpp  socket_utils.cpp  socket_utils.hpp  tcp.cpp  tcp_serial.cpp  tcp_server.cpp  transmitter.cpp  transport_layer.cpp  udp_advertiser.cpp  usb_serial_unix.cpp  usb_serial_win.cpp
libkovanserial/test/: CMakeLists.txt  heartbeat.cpp  property_client.cpp  property_server.cpp  recv_action.cpp  screenshot.cpp  send_action.cpp  send_file.cpp  server.cpp
pcompiler/: CMakeLists.txt  Readme.md
pcompiler/compilers/c/: c.cpp  c.hpp
pcompiler/compilers/class/: class.cpp  class.hpp
pcompiler/compilers/common/: options.hpp  platform.cpp  platform.hpp
pcompiler/compilers/cpp/: cpp.cpp  cpp.hpp
pcompiler/compilers/java/: java.cpp  java.hpp
pcompiler/compilers/lisp/: lisp.cpp  lisp.hpp
pcompiler/compilers/o/: o.cpp  o.hpp
pcompiler/compilers/passthrough/: passthrough.cpp  passthrough.hpp
pcompiler/compilers/py/: py.cpp  py.hpp
pcompiler/include/pcompiler/: base.hpp  compilers.hpp  engine.hpp  input.hpp  options.hpp  output.hpp  pcompiler.hpp  pool.hpp  progress.hpp  result.hpp
pcompiler/src/: base.cpp  compilers.cpp  engine.cpp  options.cpp  output.cpp  result.cpp
pcompiler/test/: CMakeLists.txt
pcompiler/test/basic/: CMakeLists.txt  basic.cpp
pcompiler/test/option_parser/: CMakeLists.txt  test_option_parser.cpp
pcompiler/tools/: CMakeLists.txt  pcompiler.cpp
