PROJECT(pcompiler)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6.0)

FIND_PACKAGE(Qt4 REQUIRED)

SET(INCLUDE ${pcompiler_SOURCE_DIR}/include)
SET(SRC ${pcompiler_SOURCE_DIR}/src)

SET(COMPILER ${pcompiler_SOURCE_DIR}/compilers)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR} 
	${CMAKE_SOURCE_DIR}/src
	${pcompiler_SOURCE_DIR}
	${pcompiler_BINARY_DIR}
	${INCLUDE}
)

IF(WIN32)
INCLUDE_DIRECTORIES(/include)
ENDIF(WIN32)

set(QT_DONT_USE_QTGUI TRUE)

INCLUDE(${QT_USE_FILE})

FILE(GLOB INCLUDES ${INCLUDE}/pcompiler/*.hpp)
FILE(GLOB SOURCES ${SRC}/*.cpp)

file(GLOB_RECURSE COMPILER_SOURCES ${COMPILER}/*.cpp)

SET(SOURCES ${SOURCES} ${COMPILER_SOURCES})
SET(MOC_SOURCES ${INCLUDES})

QT4_WRAP_CPP(SOURCES ${MOC_SOURCES})

SET(CMAKE_CXX_FLAGS "-Wall")

IF(APPLE)
	SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -arch x86_64 -g")
	LINK_DIRECTORIES(/Library/Frameworks/)
ELSEIF(UNIX)

ELSEIF(WIN32)
	SET(CMAKE_CXX_FLAGS "-Wl,--enable-auto-import")
ENDIF()

ADD_LIBRARY(pcompiler SHARED ${SOURCES})

SET(LIBRARY_OUTPUT_PATH ${pcompiler_SOURCE_DIR}/lib)
TARGET_LINK_LIBRARIES(pcompiler ${QT_LIBRARIES})

LINK_DIRECTORIES(${pcompiler_SOURCE_DIR}/lib)

IF(APPLE)
SET(OSX_INSTALL_NAMES_SCRIPT "${pcompiler_SOURCE_DIR}/scripts/osx_install_names.sh")
SET(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -headerpad_max_install_names")
ADD_CUSTOM_TARGET(osx_install_names ALL 
	COMMAND sh ${OSX_INSTALL_NAMES_SCRIPT} ${LIBRARY_OUTPUT_PATH}/libpcompiler.dylib
		QtCore.framework/Versions/4/QtCore
	WORKING_DIRECTORY ${LIBRARY_OUTPUT_PATH}
	DEPENDS pcompiler)
ENDIF(APPLE)

add_subdirectory(test)
add_subdirectory(tools)

IF(WIN32)
install(FILES ${INCLUDES} DESTINATION ${CMAKE_SOURCE_DIR}/../prefix/include/pcompiler)
INSTALL(TARGETS pcompiler
	ARCHIVE DESTINATION ${CMAKE_SOURCE_DIR}/../prefix/lib
	RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/../prefix/lib)
ELSE(WIN32)
install(FILES ${INCLUDES} DESTINATION include/pcompiler)
INSTALL(TARGETS pcompiler LIBRARY DESTINATION lib)
ENDIF(WIN32)
